# bfjit

./: CMakeLists.txt  LICENSE  README.md  external-code.txt
include/: bfjit-bitops.h  bfjit-codegen.h  bfjit-compiler.h  bfjit-io.h  bfjit-memory.h  bfjit-runtime.h  bfjit-time.h  bfjit.h
src/: bfjit-codegen.c  bfjit-compiler.c  bfjit-debug-compiler.c  bfjit-io.c  bfjit-memory.c  bfjit-runtime.c  bfjit-time.c  bfjit.c
test/: CMakeLists.txt  cells30k.b  life-output.txt  lost-kingdom-output.txt  mandelbrot.b  out-of-bounds-1.b  out-of-bounds-2.b  out-of-bounds-3.b  out-of-bounds-4.b  unmatched-brackets-1.b  unmatched-brackets-3.b
